# marmitaria

./: .gitignore  Makefile  pyproject.toml  settings.toml
app/: __init__.py  extensions.py
app/backend/: __init__.py
app/backend/resources/funcionario/: __init__.py  resource.py
app/database/: models.py
