[tool.poetry]
name = "marmitaria"
version = "0.1.0"
description = ""
authors = ["Wesley Júnior <agarwesley19@gmail.com>"]
license = "MIT License"
readme = "README.md"
repository = "https://github.com/owesleyshw/marmitaria"
homepage = "https://github.com/owesleyshw/marmitaria"
keywords = ['flask', 'restapi', 'project']

[tool.poetry.dependencies]
python = "^3.8"
black = "^22.1.0"
Flask = "^2.0.3"
Flask-Cors = "^3.0.10"
Flask-JWT-Extended = "^4.3.1"
Flask-Migrate = "^3.1.0"
Flask-RESTful = "^0.3.9"
Flask-SQLAlchemy = "^2.5.1"
python-dotenv = "^0.19.2"
dynaconf = "^3.1.7"
python-slugify = "^6.1.1"
uuid = "^1.30"
mysql-connector-python = "^8.0.28"
mysqlclient = "^2.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
